added formularz.html file. Moved source code from index.html to formularz.html. Made homepage script on index.html

--- a/index.html
+++ b/index.html
@@ -7,36 +7,11 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 
-<!--test zapisywania zmian-->
 </head>
 <body>
     <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 13vw; margin-top: 1%; color: white; text-align: center; margin-bottom: 0%;"><a href="https://cyfrowe.github.io/gra" class="obrazek"><img src="jgs ikona.png" alt="jg studio logo" class="obrazek">STUDIOS</a></p>
-    <form>
-        <fieldset>
-            <h2>Formularz rejestracyjny:</h2>
-                <br>
-                Podaj swoje nazwisko: <input type="text" placeholder="nazwisko" class="pole"><br>
-                Podaj swoje imie:     <input type="text" placeholder="imie" class="pole"><br>
-                <br>
-                Wybierz płeć:<br>
-                <input type="radio" name="Kobieta">Kobieta
-                <input type="radio" name="Mężczyzna">Mężczyzna<br>
-                <br>
-                Podaj adres email:<br>
-                <input type="email" placeholder="im.nazw@cyfroweszkoly.pl" class="pole"><br>
-                <br>
-                <input id="tak" type="checkbox" required> Zgoda na przetwarzanie danych osobowych<br>
-                <input type="checkbox"> Zgoda na wykorzystanie wizerunku
-
-                <br>
-                <br>
-                Dlaczego chcesz dołączyć?<br>
-                <textarea cols="40" rows="5" placeholder="Wpisz swoją motywację tutaj" class="pole"></textarea>
-                <br>
-                <input type="submit" class="przycisk" value="Wyślij">
-                <input type="reset" class="przycisk" value="Wyczyść">
-        </fieldset>
-    </form>
+    <b style="text-align: center;">witamy na stronie głównej JG STUDIOS</b>
+    <a href="formularz.html">wypełnij formularz</a>
 </body>
 </html>
 
