--- a/formularz.html
+++ b/formularz.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 13vw; margin-top: 1%; color: white; text-align: center; margin-bottom: 0%;"><a href="https://cyfrowe.github.io/gra" class="obrazek"><img src="jgs ikona.png" alt="jg studio logo" class="obrazek">STUDIOS</a></p>
+    <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 13vw; margin-top: 1%; color: white; text-align: center; margin-bottom: 0%;"><a href="index.html" class="obrazek"><img src="jgs ikona.png" alt="jg studio logo" class="obrazek">STUDIOS</a></p>
     <form>
         <fieldset>
             <h2>Formularz rejestracyjny:</h2>
