tryy'ng to fix images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>JG Studios</title>
-    <link rel="icon" type="image/x-icon" href="jgs ikona.png">
+    <link rel="icon" type="image/x-icon" href="images/jgs ikona.png">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 
