--- a/formularz.html
+++ b/formularz.html
@@ -2,14 +2,14 @@
 <html lang="pl">
 <head>
 	<meta charset="UTF-8">
-	<title>JG Studios</title>
-    <link rel="icon" type="image/x-icon" href="jgs ikona.png">
+	<title>Formularz</title>
+    <link rel="icon" type="image/x-icon" href="images/jgs ikona.png">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 
 </head>
 <body>
-    <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 13vw; margin-top: 1%; color: white; text-align: center; margin-bottom: 0%;"><a href="index.html" class="obrazek"><img src="jgs ikona.png" alt="jg studio logo" class="obrazek">STUDIOS</a></p>
+    <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 13vw; margin-top: 1%; color: white; text-align: center; margin-bottom: 0%;"><a href="index.html" class="obrazek"><img src="images\jgs ikona.png" alt="jg studio logo" class="obrazek">STUDIOS</a></p>
     <form>
         <fieldset>
             <h2>Formularz rejestracyjny:</h2>
