--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 </head>
 <body>
-    <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 13vw; margin-top: 1%; color: white; text-align: center; margin-bottom: 0%;"><a href="https://cyfrowe.github.io/gra" class="obrazek"><img src="images/jgs ikona.png" alt="jg studio logo" class="obrazek">STUDIOS</a></p>
-    <b style="text-align: center;">witamy na stronie głównej JG STUDIOS</b>
-    <a href="formularz.html">wypełnij formularz</a>
+    <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 13vw; margin-top: 1%; color: white; text-align: center; margin-bottom: 0%;"><img src="images/jgs ikona.png" alt="jg studio logo" class="obrazek">STUDIOS</p>
+    <b style="text-align: center;" class="powitanie">witamy na stronie głównej JG STUDIOS</b><br>
+    <a href="formularz.html" class="formlink">wypełnij formularz</a>
 </body>
 </html>
 
