try'ng to fix button and text again

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 13vw; margin-top: 1%; color: white; text-align: center; margin-bottom: 0%;"><img src="images/jgs ikona.png" alt="jg studio logo" class="obrazek">STUDIOS</p>
-    <b>witamy na stronie głównej JG STUDIOS</b><br>
+    <b class="powitanie">witamy na stronie głównej JG STUDIOS</b><br>
     <a href="formularz.html" class="formlink">wypełnij formularz</a>
 </body>
 </html>
