--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 13vw; margin-top: 1%; color: white; text-align: center; margin-bottom: 0%;"><img src="images/jgs ikona.png" alt="jg studio logo" class="obrazek">STUDIOS</p>
     <p class="powitanie">witamy na stronie głównej JG STUDIOS</p><br>
-    <a href="formularz.html" class="formlink">wypełnij formularz</a>
+    <div class="srodek">
+        <a href="formularz.html" class="formlink">wypełnij formularz</a>
+    </div>
 </body>
 </html>
 
