try'ng to fix text v5

--- a/formularz.html
+++ b/formularz.html
@@ -10,31 +10,33 @@
 </head>
 <body>
     <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 13vw; margin-top: 1%; color: white; text-align: center; margin-bottom: 0%;"><a href="index.html" class="obrazek"><img src="images\jgs ikona.png" alt="jg studio logo" class="obrazek">STUDIOS</a></p>
-    <form>
-        <fieldset>
-            <h2>Formularz rejestracyjny:</h2>
-                <br>
-                Podaj swoje nazwisko: <input type="text" placeholder="nazwisko" class="pole"><br>
-                Podaj swoje imie:     <input type="text" placeholder="imie" class="pole"><br>
-                <br>
-                Wybierz płeć:<br>
-                <input type="radio" name="Kobieta">Kobieta
-                <input type="radio" name="Mężczyzna">Mężczyzna<br>
-                <br>
-                Podaj adres email:<br>
-                <input type="email" placeholder="im.nazw@cyfroweszkoly.pl" class="pole"><br>
-                <br>
-                <input id="tak" type="checkbox" required> Zgoda na przetwarzanie danych osobowych<br>
-                <input type="checkbox"> Zgoda na wykorzystanie wizerunku
+    <div class="kolor">
+        <form>
+            <fieldset>
+                <h2>Formularz rejestracyjny:</h2>
+                    <br>
+                    Podaj swoje nazwisko: <input type="text" placeholder="nazwisko" class="pole"><br>
+                    Podaj swoje imie:     <input type="text" placeholder="imie" class="pole"><br>
+                    <br>
+                    Wybierz płeć:<br>
+                    <input type="radio" name="Kobieta">Kobieta
+                    <input type="radio" name="Mężczyzna">Mężczyzna<br>
+                    <br>
+                    Podaj adres email:<br>
+                    <input type="email" placeholder="im.nazw@cyfroweszkoly.pl" class="pole"><br>
+                    <br>
+                    <input id="tak" type="checkbox" required> Zgoda na przetwarzanie danych osobowych<br>
+                    <input type="checkbox"> Zgoda na wykorzystanie wizerunku
 
-                <br>
-                <br>
-                Dlaczego chcesz dołączyć?<br>
-                <textarea cols="40" rows="5" placeholder="Wpisz swoją motywację tutaj" class="pole"></textarea>
-                <br>
-                <input type="submit" class="przycisk" value="Wyślij">
-                <input type="reset" class="przycisk" value="Wyczyść">
-        </fieldset>
-    </form>
+                    <br>
+                    <br>
+                    Dlaczego chcesz dołączyć?<br>
+                    <textarea cols="40" rows="5" placeholder="Wpisz swoją motywację tutaj" class="pole"></textarea>
+                    <br>
+                    <input type="submit" class="przycisk" value="Wyślij">
+                    <input type="reset" class="przycisk" value="Wyczyść">
+            </fieldset>
+        </form>
+    </div>
 </body>
 </html>
