edited text & button on homepage.

--- a/formularz.html
+++ b/formularz.html
@@ -19,8 +19,8 @@
                     Podaj swoje imie:     <input type="text" placeholder="imie" class="pole"><br>
                     <br>
                     Wybierz płeć:<br>
-                    <input type="radio" name="Kobieta">Kobieta
-                    <input type="radio" name="Mężczyzna">Mężczyzna<br>
+                    <input type="radio" name="plec">Kobieta
+                    <input type="radio" name="plec">Mężczyzna<br>
                     <br>
                     Podaj adres email:<br>
                     <input type="email" placeholder="im.nazw@cyfroweszkoly.pl" class="pole"><br>
