--- a/formularz.html
+++ b/formularz.html
@@ -11,27 +11,27 @@
 <body>
     <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 13vw; margin-top: 1%; color: white; text-align: center; margin-bottom: 0%;"><a href="index.html" class="obrazek"><img src="images\jgs ikona.png" alt="jg studio logo" class="obrazek">STUDIOS</a></p>
     <div class="kolor">
-        <form>
+        <form action="send.php" method="post">
             <fieldset>
                 <h2>Formularz rejestracyjny:</h2>
                     <br>
-                    Podaj swoje nazwisko: <input type="text" placeholder="nazwisko" class="pole"><br>
-                    Podaj swoje imie:     <input type="text" placeholder="imie" class="pole"><br>
+                    Podaj swoje nazwisko: <input type="text" placeholder="nazwisko" class="pole" name="nazwisko"><br>
+                    Podaj swoje imie:     <input type="text" placeholder="imie" class="pole" name="imie"><br>
                     <br>
                     Wybierz płeć:<br>
                     <input type="radio" name="plec">Kobieta
                     <input type="radio" name="plec">Mężczyzna<br>
                     <br>
                     Podaj adres email:<br>
-                    <input type="email" placeholder="im.nazw@cyfroweszkoly.pl" class="pole"><br>
+                    <input type="email" placeholder="im.nazw@cyfroweszkoly.pl" class="pole" name="email"><br>
                     <br>
-                    <input id="tak" type="checkbox" required> Zgoda na przetwarzanie danych osobowych<br>
-                    <input type="checkbox"> Zgoda na wykorzystanie wizerunku
+                    <input id="tak" type="checkbox" required name="dane"> Zgoda na przetwarzanie danych osobowych<br>
+                    <input type="checkbox" name="wizerunek"> Zgoda na wykorzystanie wizerunku
 
                     <br>
                     <br>
                     Dlaczego chcesz dołączyć?<br>
-                    <textarea cols="40" rows="5" placeholder="Wpisz swoją motywację tutaj" class="pole"></textarea>
+                    <textarea cols="40" rows="5" placeholder="Wpisz swoją motywację tutaj" class="pole" name="motywacja"></textarea>
                     <br>
                     <input type="submit" class="przycisk" value="Wyślij">
                     <input type="reset" class="przycisk" value="Wyczyść">
